--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@iconify-json/fa": "^1.2.1",
+    "@iconify-json/fa6-brands": "^1.2.5",
+    "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.6.1",
+    "astro-icon": "^1.1.5",
+    "icons": "^1.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
